# necromancer

./: .gitignore  CHANGELOG.md  LICENSE  PLANNING.md  README.md  TASKS.md  main.py  pyproject.toml  requirements.txt  unit_test.bat
src/: game.py  settings.py
tests/unit/: test_game.py
